--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -10,12 +10,33 @@
   flex-direction: center;
   padding: 20px;
 }
+@media screen and (min-width: 768px) {
+  .jobs-second-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    /* border: solid 1px yellow; */
+    justify-content: flex-start;
+  }
+  .jobs-second-top {
+    width: 35%;
+  }
+  .jobs-second-bottom {
+    width: 65%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .search-container {
+    display: flex;
+  }
+}
+
 .input-search-box {
   padding: 15px;
   outline: none;
   border: 0;
   background-color: transparent;
-
   border-radius: 5px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
@@ -42,12 +63,41 @@
   align-items: center;
   width: 100%;
   border: solid 1px #7e858e;
+  border-radius: 5px;
 }
 @media screen and (max-width: 768px) {
   .search-container {
     display: flex;
   }
 }
+.search-container2 {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .search-container2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 60%;
+    border: solid 1px #7e858e;
+    margin-left: 10px;
+    border-radius: 5px;
+  }
+  .input-search-box2 {
+    padding: 15px;
+    outline: none;
+    border: 0;
+    background-color: transparent;
+    border-radius: 5px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    color: aliceblue;
+    width: 100%;
+    border-right: 0;
+    height: 40px;
+  }
+}
+
 .profile-details-container {
   background-image: url('https://assets.ccbp.in/frontend/react-js/profile-bg.png');
   height: 250px;
@@ -114,4 +164,42 @@
 }
 .label-text-radio {
   margin-left: 10px;
+}
+.ul-container1 {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+  width: 100%;
+  /* border: solid 10px darkblue; */
+}
+@media screen and (min-width: 768px) {
+  .jobs-failure-view-image {
+    padding-top: 50px;
+    height: 350px;
+    width: 350px;
+    text-align: center;
+    align-self: center;
+  }
+}
+.jobs-failure-view-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  margin-top: 10px;
+  color: #ffffff;
+}
+.failure-text {
+  text-align: center;
+}
+.failure-retry-button {
+  background-color: #4f46e5;
+  width: 100px;
+  align-self: center;
+  color: #ffffff;
+  border-radius: 5px;
+  padding: 8px;
+  border: 0px;
+  cursor: pointer;
+  outline: none;
 }
