--- a/src/components/JobItem/index.css
+++ b/src/components/JobItem/index.css
@@ -66,4 +66,27 @@
 }
 .bottom {
   display: flex;
+  justify-content: space-between;
+}
+.bottom1 {
+  display: flex;
+  flex-direction: row;
+}
+.hr-line1 {
+  border-style: solid;
+  border-width: 1px;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 0;
+  border-color: #7e858e;
+}
+.desc {
+  font-size: 16px;
+  font-family: 'Roboto';
+  line-height: 1;
+  color: #ffffff;
+}
+.job-description {
+  color: #f1f5f9;
+  margin-top: 0;
 }
