--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -56,6 +56,8 @@
   border-left: 0;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
+  cursor: pointer;
+  outline: none;
 }
 .search-container {
   display: none;
