--- a/src/components/JobItemDetails/index.css
+++ b/src/components/JobItemDetails/index.css
@@ -1,12 +1,136 @@
-.each-job-detail-container {
+.first {
   min-height: 100vh;
   background-color: #000000;
-  color: aliceblue;
+  padding-bottom: 10px;
+  color: #ffffff;
+  /* padding: 20px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
 }
 .job-details-card {
-  margin: 15px;
   /* border: solid 1px green; */
   padding: 15px;
   background-color: #272727;
   border-radius: 8px;
+  /* width: 80%; */
+  align-self: center;
+  margin: 20px;
+}
+.skills-heading {
+  font-size: 20px;
+  color: #ffffff;
+}
+.ul-skills-container {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.skills-li-elements {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.skill-image {
+  height: 50px;
+  margin-right: 20px;
+}
+
+.skills {
+  font-family: 'Roboto';
+  font-size: 20px;
+  min-width: 120px;
+}
+.life-at-company-container {
+  display: flex;
+  flex-direction: column;
+}
+.life-at-company-image {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .life-at-company-container {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .life-at-company-image {
+    width: 250px;
+    height: 250px;
+  }
+  .life-at-company-description {
+    width: 100%;
+  }
+  .im-con {
+    width: 60%;
+    text-align: center;
+    margin-top: 18px;
+  }
+}
+.life-at-company-description {
+  font-family: 'Roboto';
+}
+.similar-card-container {
+  font-family: 'Roboto';
+  margin: 20px;
+}
+.ul-similar-jobs {
+  list-style-type: none;
+  padding-left: 0;
+  font-family: 'Roboto';
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.failure-container {
+  background-color: #000000;
+  min-height: 100vh;
+}
+.failure-image-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.fail-head {
+  color: #ffffff;
+  font-family: 'Roboto';
+}
+.fail-para {
+  color: #ffffff;
+  font-family: 'Roboto';
+}
+.failure-button {
+  background-color: #4f46e5;
+  color: #ffffff;
+  border-radius: 5px;
+  width: 80px;
+  padding: 10px;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+}
+.failure-image {
+  margin-top: 20px;
+}
+.link-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.link {
+  color: #4f46e5;
+  text-decoration: none;
+}
+.link-icon {
+  color: #4f46e5;
+  height: 15px;
+  margin-left: 5px;
 }
