--- a/src/components/Jobs/index.css
+++ b/src/components/Jobs/index.css
@@ -205,3 +205,10 @@
   cursor: pointer;
   outline: none;
 }
+.to-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
